fixed scrollbar

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,5 +1,31 @@
 *
   box-sizing: border-box
+::-webkit-scrollbar-button
+  background-image: url('')
+  background-repeat: no-repeat
+  width: 5px
+  height: 0px
+
+::-webkit-scrollbar-track
+  background-color: #ecedee
+
+::-webkit-scrollbar-thumb
+  -webkit-border-radius: 0px
+  border-radius: 0px
+  background-color: #32495E
+
+::-webkit-scrollbar-thumb:hover
+  background-color: #32495E
+
+::-webkit-resizer
+  background-image: url('')
+  background-repeat: no-repeat
+  width: 4px
+  height: 0px
+
+::-webkit-scrollbar
+  width: 4px
+
 @font-face
   font-family: "TTHoves"
   src: url("../fonts/TTHoves-Regular.woff") format("woff"),
