--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -137,7 +137,6 @@
         width: 100%
         height: 240px
         object-fit: cover
-
 .item
   &-info
     transition: all 0s ease-out 0s
@@ -145,8 +144,7 @@
     bottom: -80px
     padding: 20px
     overflow: hidden
-    overflow-y: scroll
-    height: 170px
+    height: 180px
     &__title
       max-width: 241px
       margin: 0
@@ -169,6 +167,8 @@
       line-height: 17px
       color: $light
       z-index: 111
+      overflow: hidden
+      overflow-y: scroll
       &--visible
         opacity: 1
 .button
